# pyautark

./: .gitignore  README.md  example.ipynb  pyproject.toml
js/: interfaces.ts  package.json  pyautark.ts  tsconfig.json
js/map/: DataManager.ts  LayerManager.ts  MapFactory.ts  MapViewer.ts
js/widgets/: CalendarWidget.ts  WidgetManager.ts
pyautark/: __init__.py  map.py  pyautark.py
pyautark/model/: CustomLayer.py  OSMLayer.py  ThematicData.py
pyautark/traitlets/: OSMLayerListTraitlet.py  OSMLayerTraitlet.py
pyautark/utils/readers/: CSVReader.py
