[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyautark"
version = "0.0.0"
dependencies = ["anywidget", 'geojson']
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["js/dist/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["js/dist/pyautark.js"]
skip-if-exists = ["js/dist/pyautark.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
npm = "npm"
build_cmd = "build"
